Ticket #4 - Added fix for editor themes for IE8 when in editing mode there would be a white gap to the left

--- a/epiceditor/themes/editor/epic-dark.css
+++ b/epiceditor/themes/editor/epic-dark.css
@@ -1,4 +1,7 @@
-html { padding:10px; }
+html {
+  padding:10px;
+  padding: 0\9; /* IE8 Hack */
+}
 
 body {
   border:0;
